@@ -1,3 +1,8 @@
+2019-12-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/literalop.c:
+	  Workaround for clang bug.
+
 2019-12-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCClospre.cc:
